# Karthik-Badri

./: .coverage  .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  NOTICE  README.md  SECURITY.md  SPEC_KIT.md  SUPPORT.md  USER_MANUAL.md  app.py  biome.json  coverage.xml  docker-compose.yml  git-cliff.toml  jest.config.js  knip.json  ml-requirements.txt  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  test_app.py
.github/workflows/: ci.yml
.gitlab/issue_templates/: bug.md  feature_request.md  security_report.md
.gitlab/merge_request_templates/: Default.md
.husky/: pre-commit
.specify/: constitution.md
.specify/Templates/: api_contract.md  feature_spec.md  plan.md  technical_spec.md
.specify/templates/: checklist.md  data_model.md  plan-template.md  plan.md  research.md  tasks-template.md
app/: __init__.py  models.py  services.py
app/routes/: api.py  attendance.py  auth.py  hr.py  main.py
app/services/: __init__.py  auth_service.py  biometric_service.py  llm_service.py  media_service.py
data-processor/: Dockerfile  app.py  render.yaml  requirements.txt
data-processor/static/: app.js  style.css  styles.css
nginx/: nginx.conf
specs/: constitution.md  feature_x.spec.md
static/: app.js  db.js  index.html  manifest.json  policy_handbook.txt  service-worker.js  styles.css
templates/: tasks.md
templates/specs/: spec.md
tests/: test_dummy.py
(+3 files in other folders)
